--- a/front/LubeParts/src/layouts/BaseLayout.astro
+++ b/front/LubeParts/src/layouts/BaseLayout.astro
@@ -23,6 +23,8 @@ const { title } = Astro.props;
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap"
       rel="stylesheet"
     />
+    <link rel="icon" href="/images/logo.png" type="image/png" />
+    <link rel="apple-touch-icon" href="/images/logo.png" />
   </head>
   <body class="bg-gray-50 text-gray-900">
     <Navbar />
