--- a/front/central-next-js/src/features/auth/ui/pages/Login.css
+++ b/front/central-next-js/src/features/auth/ui/pages/Login.css
@@ -50,6 +50,12 @@
   gap: 12px;
 }
 
+.login-logo img {
+  height: 128px;
+  width: auto;
+  display: inline-block;
+}
+
 .login-form {
   display: flex;
   flex-direction: column;
